--- a/1.Introduction.tex
+++ b/1.Introduction.tex
@@ -16,7 +16,7 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
     \label{fig:Paris_roll_out}
 \end{figure}
 
-\gls{RES} are connected to the power system through Power Electronic (\gls{PE}) converters as shown in Figure \ref{fig:Energy_conv_system_2}. The \gls{PE} converters do not possess inherent inertial response characteristics. Until now, integration of \gls{RES} to the power system has not created major problems since the stability of the system is maintained by the synchronous machines in power plants. Traditionally, the inertia for the power system is provided by these synchronous machines connected to the network (Figure \ref{fig:Energy_conv_system}). However, an increase in \gls{RES} in the future causes an increase in \gls{PE} converter based generation units. Simultaneously, the synchronous machines in the conventional power plants using non-renewable energy sources need to be disconnected from the network. This makes the power systems weak due to low short circuit power and low system inertia. Therefore, the consequence of disconnecting the synchronous generators leads to the requirement of the \gls{PE} converter based generation units to take up the role of governing the stability of the power system.
+\gls{RES} are connected to the power system through Power Electronic (\gls{PE}) converters as shown in Figure \ref{fig:Energy_conv_system_2}. The \gls{PE} converters do not possess inherent inertial response characteristics. Until now, integration of \gls{RES} to the power system has not created major problems since the stability of the system is maintained by the synchronous machines in power plants. Traditionally, the inertia for the power system is provided by these synchronous machines connected to the network (Figure \ref{fig:Energy_conv_system}). However, an increase in \gls{RES} in the future causes an increase in \gls{PE} converter based generation units. Simultaneously, the synchronous machines in the conventional power plants need to be disconnected from the network. This makes the power systems weak due to low short circuit power and low system inertia. Therefore, the consequence of disconnecting the synchronous generators leads to the requirement of the \gls{PE} converter based generation units to take up the role of governing the stability of the power system.
 
 \begin{figure}[H]
 \centering
@@ -35,10 +35,10 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
 \end{figure}
 
 %\section*{Small scale offshore networks}
-The majorly contributing source among the \gls{RES} is offshore wind energy and as a result, the deployment of offshore wind energy technology is expected to grow further. As the share of offshore wind energy among the \gls{RES} increases, the integration of \gls{PE} converter based generation units becomes more challenging. The integration of offshore wind power plants to weak power systems pose various research challenges on the power system stability. 
+The majorly contributing source among the available \gls{RES} is wind energy. Specifically, offshore wind energy is predicted to be the most significant source of energy among the North Sea countries by 2040 \cite{muller2017translate}. As a result, the deployment of offshore wind energy technology is expected to grow further. With the increase in integration of offshore wind energy, the inherent characteristics of offshore wind energy conversion systems will affect the nature of the power system. The vulnerable wind speed conditions due to the uncertain behaviour of wind, could lead to variations in the supply and demand and therefore, fluctuations in voltages and frequency are bound to occur. Moreover, as the power systems become weak due to the decommissioning of synchronous generators in conventional power plants that use non-renewable sources, the integration of offshore wind power plants to such weak power systems pose various research challenges on the power system stability. 
 
 
-One among the challenge is related to voltage stability. The continuous variations in wind speed causes constant change in the active power output of the wind power plant. This could lead to an increase in the reactive power output and consequently voltage at the point of common coupling (\gls{PCC}). The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern Wind Generators (\gls{WG}s) are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
+One among the challenge is related to voltage stability. The continuous variations in offshore wind speed causes constant change in the active power output of the offshore wind power plant. This could lead to an increase in the reactive power output and consequently voltage at the point of common coupling (\gls{PCC}). The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern Wind Generators (\gls{WG}s) are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
 If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, these controllers are not suitable for operation in highly \gls{PE} converter dominated grids as the connected network is weak and is not capable of absorbing the injected currents. Furthermore, during the scenario of islanding, voltage control by the conventional current controllers is ineffective as the deviation in voltage is not high enough to activate a productive voltage reduction mechanism. There are challenges in terms of frequency stability  as well since the conventional current controllers in the \gls{WG}s are not equipped to provide frequency control of the network during islanding. 
 
 Currently, the state-of-the-art technology for the transfer of offshore wind power to the onshore system is Voltage Source Converter (\gls{VSC}) based  - High Voltage Direct Current (\gls{HVDC}) transmission links. Presently, Modular Multi-level Converter (\gls{MMC}) topology that falls under the classification of \gls{VSC} topologies is the most suitable solution. Few of the advantages of \gls{MMC} are \cite{cigre_B455}, (1) ease of integration with Offshore Wind Farms (\gls{OWF})s, (2) supporting bi-directional flow of power between the offshore network and onshore system, and (3) independent control of active and reactive powers in the network. However, with the available technology, \gls{MMC}-\gls{HVDC} transmission are limited to a rated capacity of 1.2 GW \cite{peralta2012detailed}.
@@ -48,18 +48,21 @@ The implementation of large scale offshore networks (greater than or equal to 2 
 
 The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to a faster dynamic behaviour and needs controllers with faster time response. Moreover, in large scale offshore networks, distant \gls{OWF}s would be connected in parallel. With parallel operation of the conventional current controllers in \gls{WG}s, interactions can persist among them and could lead to instability of the network. Additionally, the restoration of grid following disturbances by the \gls{PE} converter units is a serious matter of concern. With the conventional current control approach, grid restoration is challenging without the help of auxiliary diesel generators. However, in the case of large scale offshore networks, the role of grid restoration must be taken up by \gls{PE} converters. There can be arguments that storage facilities such as battery and thermal can be a realizable solution in case when there are no conventional generators available. Huge investment costs, low lifetime and low efficiency when compared to controller modifications are the drawbacks that make these storage facilities practically unusable in large scale offshore networks \cite{telaretti_economic_2016}.
 
+Traditionally, the transmission of power from \gls{OWF} to the offshore converter station uses a combination of 33 kV and 145 kV \gls{HVAC} cables. The \gls{OWF}s are connected to an \gls{AC} offshore platform using 33 kV \gls{HVAC} cables. The platform holds a power transformer that is used to step-up voltage from 33 kV to 145 kV, and power is transferred from the \gls{AC} platform to the offshore converter station using 145 kV \gls{HVAC} cables \cite{abdelwahed2016power}. However, the upcoming projects are expected to have a higher voltage level of 66 kV for transmission to allow twice the amount of power transferred compared to 33 kV. Therefore, this would only require 66 kV \gls{HVAC} cables to directly connect \gls{OWF}s to offshore converter station, avoiding the use of an \gls{AC} collector platform \cite{dnv66kv}. Hence, advancing towards large scale offshore networks, it would be more appropriate to assess the performance of these networks developed with 66 kV \gls{HVAC} transmission. 
+
+% On the \gls{OWF} side, conventionally, the \gls{OWF}s are connected to a \gls{AC} collector platform through 33 kV cables. At the platform, a 33/145 kV transformer is used to step-up the voltage and the power is transferred to the offshore converter station using 145 kV cables. However, the upcoming projects plan to have a rating of 66 kV \gls{HVAC} transmission compared to the conventional combination of 33 kV and 145 kV \gls{HVAC} transmission due to the advantages of lesser array cabling and higher power transmission. In such cases, the \gls{AC} collector platform can be avoided and power can transmitted from the \gls{OWF}s to the offshore converter station directly using 66 kV \gls{HVAC} cables \cite{dnv66kv}.
+
 With the available \gls{MMC}-\gls{HVDC} transmission technology, multiple \gls{MMC}-\gls{HVDC} transmission links connected in parallel would be required to transfer the bulk amount of offshore wind power generated from large scale offshore networks to the onshore system. In such networks, the power flow between the parallel operated \gls{MMC}s and the \gls{OWF}s must be coordinated during steady state and dynamic conditions. The major challenges regarding voltage and frequency control during islanding of the \gls{OWF}s must be taken into account. The scenario of reactive current injection that needs to be provided by the \gls{WG}s during dynamic conditions as demanded by majority of the grid codes must also be taken into consideration \cite{mohseni_review_2012}. Therefore, the progress towards the development of large scale offshore networks calls for a generic model with a suitable layout with the available technology that is capable of tackling the aforementioned technical challenges and providing stable operation during steady state and dynamic conditions. 
 % the connection of distant \gls{OWF}s also creates challenges for the system operators. High Voltage Direct Current (\gls{HVDC}) transmission is preferred over High Voltage Alternating Current (\gls{HVAC}) for longer distances due to lower losses and lower investment costs \cite{ryndzionek_evolution_2020}. Conventionally, 
 
 
 \section{Literature Review}
 
-As seen in Section \ref{Background}, large scale deployment of \gls{OWF}s are a crucial requirement to meet the Paris agreement. Hence, a generic model for large scale networks with the latest trend in available technology is a key research requirement. 
-
+As seen in Section \ref{Background}, the major challenges are; development of large scale offshore networks with available technology is challenging, no much knowledge about 66 kV \gls{HVAC} transmission available, and new control strategies are required that can provide better control of voltage and frequency. Hence, a generic model for large scale offshore networks with the latest trend in available technology, and enhanced control strategies is a key research requirement. 
 % The literature review is mainly focused on three aspects: 1) control strategies to overcome the technical challenges related to voltage and frequency control in \gls{WG}s, 2) power transfer from the \gls{OWF}s to the offshore \gls{MMC} converter and 3) topology of  
 % Going with the latest trend, different approaches are available for connection of \gls{MMC}s.
 
-On the \gls{VSC}-\gls{HVDC} side, there are mainly three configurations for the connection of offshore and onshore converter stations that are currently available \cite{cigre_B455}, \cite{sharifabadi2016design}: 
+Based on \gls{MMC}-\gls{HVDC} transmission technology, there are mainly three configurations available for the connection of offshore and onshore converter stations \cite{cigre_B455}, \cite{sharifabadi2016design}: 
 \begin{itemize}
     \item Point-to-point connection: The configuration connects one \gls{OWF} to the offshore converter station, which is then connected using \gls{HVDC} link to the onshore converter station.
     \item Multi-infeed connection: The configuration involves connecting one \gls{OWF} to two different onshore systems by connecting two offshore converter stations on a common bus on the Alternating Current (\gls{AC}) side and transmitting power through two \gls{HVDC} links. Such a configuration allows for increasing the rating of the \gls{OWF} beyond the capacity of a single offshore converter station. The drawback of such a configuration is that, it allows the connection of only one \gls{OWF} to the network.
@@ -67,9 +70,9 @@ On the \gls{VSC}-\gls{HVDC} side, there are mainly three configurations for the 
     Current (MTDC) connection: In this configuration, the \gls{HVDC} links of multiple offshore converter stations are connected to a main Direct Current (\gls{DC}) link. Such a configuration enables transfer of active power to the onshore system depending on the capacity of the main \gls{DC} link. The drawback of such a configuration is that, a complete shut down and restart of the connected \gls{MMC}s is required for a fault on the \gls{DC} side.
 \end{itemize}
 
-The multi-infeed and the MTDC connections allow for parallel operation of \gls{MMC}s which is a significant requirement for large scale offshore networks with the available technology. But both the configurations have the drawback of being able to connect only one \gls{OWF} to the network. Therefore, configurations that utilize several \gls{OWF}s with parallel operation of \gls{MMC}s are currently unavailable and is a key area of research.
+The multi-infeed and the MTDC connections allow for parallel operation of \gls{MMC}s which is a significant requirement for large scale offshore networks with the available technology. But both the configurations have the drawback of being able to connect only one \gls{OWF} to the network. Therefore, configurations that utilize several \gls{OWF}s with parallel operation of \gls{MMC}s are currently unavailable and is a key area of research. The topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the \gls{OWF}s (all connected in parallel) to the offshore converter station. However, the topology examined does not utilize parallel operation of \gls{MMC}s and uses only one \gls{MMC}-\gls{HVDC} link with a maximum power transfer capacity of 1 GW.
 
-On the \gls{OWF} side, conventionally, the \gls{OWF}s are connected to a \gls{AC} collector platform through 33 kV cables. At the platform, a 33/145 kV transformer is used to step-up the voltage and the power is transferred to the offshore converter station using 145 kV cables. However, the upcoming projects plan to have a rating of 66 kV \gls{HVAC} transmission compared to the conventional combination of 33 kV and 145 kV \gls{HVAC} transmission due to the advantages of lesser array cabling and higher power transmission. In such cases, the \gls{AC} collector platform can be avoided and power can transmitted from the \gls{OWF}s to the offshore converter station directly using 66 kV \gls{HVAC} cables \cite{dnv66kv}. The topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the \gls{OWF}s to the offshore converter station.
+% On the \gls{OWF} side, 
 
 %The technical challenges regarding voltage and frequency control are key aspects to be considered for the development of large scale networks.
 Typically, \gls{PE} converters in the \gls{WG}s are connected to the network for parallel operation using present state-of-the-art technology, current control strategies. In such control strategies, the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these control strategies is that they require an already existing reference voltage. There are control strategies that create the reference voltage and are termed as voltage control strategies. One among the voltage control strategies is the V/F (voltage/frequency) control that is utilized for operation in the islanded mode. The drawback with V/F control is that it is not equipped for the parallel operation of various voltage forming converter units \cite{weise2019comparison}. Therefore, there needs to be new control strategies in the \gls{WG}s that can create the reference voltage and work in parallel operation. Such control strategies are an emerging area of research. There are studies performed to implement control strategies that can create voltage reference and work in parallel operation as well. Few among them are mentioned as follows:
@@ -83,14 +86,15 @@ Typically, \gls{PE} converters in the \gls{WG}s are connected to the network for
     This strategy is common for standalone grids, where the parallel operation of voltage forming units is developed recently using the f/P (frequency/active power) and V/Q (voltage/reactive power) droop controls similar to the control in synchronous generators \cite{bouzid2016simulation}. Few authors have named these droop control concepts as Virtual Synchronous Machines Without Inertia (VSCM0H) \cite{yu2016use}.
     
     \item Direct Voltage Control (\gls{DVC}):
-    \gls{DVC} is a representation of the conventional current control approach towards a voltage control. \gls{DVC} allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous voltage control both in steady-state and dynamic scenarios. This control method is implemented for analysis in this thesis work.
+    \gls{DVC} is a representation of the conventional current control approach towards a voltage control. \gls{DVC} allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous voltage control both in steady-state and dynamic scenarios. %This control method is implemented for analysis in this thesis work.
     
     \item Extended Current Control:
     The control is similar to the conventional current control with an additional inertia control in the outer control loop by using a synthetic inertia controller that gives a behaviour similar to that of a synchronous machine \cite{duckwitz_derivation_2019} \cite{liu2017control}. 
 \end{itemize}
 
-The real-time implementation of \gls{DVC} in Type-4 \gls{WG} is attempted in \cite{sethi_real-time_nodate-new}. However, the latest trend of 66 kV \gls{HVAC} transmission and the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions is lacking.
- 
+Studies of I. Erlich et al. and A. Korai et al. in \cite{erlich_new_2017} and \cite{korai_dynamic_2019} show appealing results of the implemented \gls{DVC} for highly \gls{PE} dominated systems. The simulations are tested for different grids based on real world data and provide promising outcomes with effective voltage and frequency control. Hence, with such proven results and available models, the \gls{DVC} strategy was chosen to be incorporated for this work. Moreover, the real-time implementation of \gls{DVC} in Type-4 \gls{WG} is attempted in \cite{sethi_real-time_nodate-new}, but the latest trend of 66 kV \gls{HVAC} transmission and the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions is lacking.
+
+It is also good to analyze the effectiveness of other control strategies mentioned above. With a generic offshore network model, different control strategies can be implemented in the \gls{OWF}s and the complexity related to the interoperability of the controllers can be assessed. However, this lies beyond the scope of this project.
 
 \section{Objectives and Research Questions}
 The overall goal of the thesis is to develop a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network and to perform analysis on the dynamics of voltage and power at various locations in the network. The thesis makes use of the Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools such as RSCAD and PowerFactory to analyze the performance of the developed control models. The average model of Type-4 \gls{WG} available in RSCAD is used as a starting point. The thesis provides a detailed description of the different available features in RSCAD that are employed to develop the 2 GW model. 
