--- a/4.Large_scale.tex
+++ b/4.Large_scale.tex
@@ -1,7 +1,7 @@
 \chapter{Modelling a Digital Twin of 2 GW, 66 kV HVAC Offshore Network with MMC-HVDC Transmission}\label{4}
 This chapter details the development of a multi-gigawatt (focus of 2 GW), 66 kV \gls{HVAC} offshore network connected to two offshore converter stations. Like in Chapter \ref{3}, an average \gls{EMT} modelling depth is used (i.e. focus on the study of three-phase faults occurring in a balanced system), the model is developed and simulations are conducted in RSCAD. The model depicts the connection of four \gls{OWF}s through a 66 kV \gls{HVAC} offshore network contributing a total of 2 GW installed capacity. The power is transferred to the onshore system through \gls{MMC} based \gls{HVDC} links. The focus is to investigate the dynamic performance of such a system when subjected to severe disturbances (e.g. three-phase line to ground fault) in the \gls{AC} part of the network. The role of both \gls{DVC} in \gls{WG}s and voltage control in \gls{MMC} is examined in detail to understand the voltage performance and the power flow distribution based on simulations performed in RSCAD. %Firstly, the topology selected for the network is explained, and then the large scale network layout with all the components is detailed. The control structures utilized in the network is described in the final part of this chapter.
 
-\subsection{Processors in RSCAD}\label{split_system}
+\section{Processors in RSCAD}\label{split_system}
 The simulations in RSCAD can be run in either NovaCor or PB5 processor cards. NovaCor processor is used for this work as they have 2-3 times the simulation capacity of a completely loaded PB5 processor \cite{noauthor_novacor_nodate_1}. For an extensive power system network, NovaCor processor requires a part of the system to be placed in a separate subsystem. RSCAD allows provision for splitting of the network into subsystems if the network is large. The splitting is done by right-clicking on the main subsystem tag and choosing "Add Subsystem" as shown in Figure \ref{fig:subsystem_RSCAD} and this feature is utilized in this section. Tline modules are used to connect subsystems. The process is explained in Section \ref{Tline_cable_RSCAD} in detail.
 
 There are two NovaCor processors available at TU Delft and they are equipped with four cores each. These cores are utilized to solve the overall network solution, auxiliary components (such as transformers, cables, generators etc.) and the controls present in the simulation. Assignment of cores for solving various components of the network is an important step that needs to be considered while modelling, as they depict the total load that is distributed over the available cores. The process is detailed in Section \ref{Aggregated_OWF_large_scale}. 
@@ -156,7 +156,7 @@ As the significant goal is to estimate the dynamic performance of the network un
     \label{fig:Subsystem_Trial}
 \end{figure}
 
-\section{Offshore Converter Stations}
+\subsection{Offshore Converter Stations}
 The offshore converter stations convert the \gls{HVAC} offshore wind power to \gls{HVDC} to transfer the power to the onshore system through \gls{HVDC} links.  %There are two offshore \gls{MMC} stations utilized in this network. 
 The existing available \gls{HVDC} links in the industry have a rated capacity of 1.4 GW. Examples for such projects are the NordLink cable connecting Norway and Denmark, NSN Link connecting Norway and the United Kingdom \cite{ryndzionek_evolution_2020}. Moreover, the standard \gls{EMT} models for \gls{MMC}s available in CIGRE B4 DC Grid Test System \cite{vrana2013cigre} have a rated capacity of 1.2 GW. Therefore, with the currently available technology, two offshore converter stations are required for the transfer of 2 GW offshore wind power. From the description of \gls{MMC} explained in Section \ref{HVDC_trans_theory}, it can be understood that \gls{MMC}s also involve \gls{PE} components. Hence, similar to the \gls{OWF} model, the average \gls{EMT} models of \gls{MMC}s are represented in the small time step blocks in RSCAD to accurately represent fast switching events. The average \gls{EMT} models available in RSCAD consists of the \gls{MMC} and interface transformer modelled in the small time step environment representing the offshore converter station. For this work, two small time step blocks are required for the representation of two offshore converter stations. Both the blocks are placed in subsystem-1. These two blocks must be initialized with different time step to avoid conflict during initialization, and thereby avoiding the time step overflow error during the start of simulation in the Runtime module. To evenly distribute the load on four cores, considering the core allocation for \gls{OWF}s in Table \ref{tab:Core_assignment_sub2}, the cores for \gls{MMC}s are allocated as shown in Table \ref{tab:Core_assignment_sub1}. The offshore converter station-1 consists of the interface transformer (IT-1) and \gls{MMC}-1 whereas offshore converter station-2 consists of the interface transformers (IT-2a, IT-2b) and \gls{MMC}-2. 
 %RSCAD also allows modelling in substep environment that can have a time step as small as 500 ns if the circuit is simple.    
@@ -175,7 +175,7 @@ MMC-2                          & 2                        \\ \hline
 \end{table}
 
 
-\subsection{Interface Transformers}
+\subsubsection{Interface Transformers}
 The interface transformers (also termed as converter transformers) are connected to the \gls{AC} side of the \gls{MMC}s and are depicted as IT-1 for offshore converter station-1 and IT-2a and IT-2b for offshore converter station-2 as shown in Figure \ref{fig:WT4_MMC2}. As explained in \cite{cigre2005b4}, these transformers entail the following main implications:
 \begin{itemize}
     \item Providing a reactance between the offshore grid and the \gls{MMC}.
@@ -199,7 +199,7 @@ As mentioned in the previous section, in the available average \gls{EMT} models 
 These available models are for 145kV \gls{AC} offshore network. Since 66 kV \gls{HVAC} network is utilized for this work, the voltage rating on the secondary side of the transformer is changed to 66 kV. As the available models for the offshore \gls{MMC} station with the control structures are designed for 145 kV offshore network, a work around to use these models to be suitable for the 66 kV network is achieved.
 \end{comment}
 
-\subsection{Modular Multilevel Converters (MMCs)}
+\subsubsection{Modular Multilevel Converters (MMCs)}
 As mentioned in Chapter \ref{1}, it is seen that Modular Multilevel Converters (\gls{MMC}) are the present converter topology preferred for \gls{VSC}-\gls{HVDC} transmission schemes due to their high efficiency and other advantages. They prove to be the state-of-the-art technology for \gls{HVDC} transmission until today. The average \gls{EMT} model of \gls{MMC} in
 RSCAD has the option of modelling the \gls{MMC} using half-bridge submodules or full-bridge submodules \cite{noauthor_mmc_nodate_1}. 
 % The voltage level determines the number of submodules required. The highest levels for \gls{HVDC} projects range from 525 kV to 600 kV. The voltages are bound to increase for the bulk transfer of power in the future projects \cite{alassi2019hvdc}.
@@ -219,11 +219,11 @@ Both the \gls{MMC}s are connected to the \gls{DC} sources through a symmetric mo
 \end{figure}
 \end{comment}
 
-\section{\gls{HVDC} Cables}
+\subsection{\gls{HVDC} Cables}
 The \gls{HVDC} cables transfer the generated wind power from the offshore converter station to the onshore system. As mentioned in the above section, the voltage level chosen for \gls{HVDC} transmission in this work is 640 kV \gls{DC}. Therefore, each cable model must be suitable for $\pm$ 320 kV. The cable parameters available in \cite{vrana2013cigre} for $\pm$ 400 kV voltage are utilized in this work. The cable model is represented in frequency-dependent phase domain using the unified cable model block as explained previously in Section \ref{HVAC_cable_RSCAD} \cite{rtds_tech}. The cables are modelled in subsystem-1 and are labelled as \gls{HVDC} cable-1 and \gls{HVDC} cable-2 for the connection from offshore converter station-1 and offshore converter station-2 to the onshore system  respectively (Figure \ref{fig:WT4_MMC2}). 
 
-\section{Onshore Equivalent Converter Stations}
-The connection between the offshore converter station and the onshore converter station follows a symmetrical monopole configuration as shown in Figure \ref{Monopole_rep} \cite{sharifabadi2016design}. However, the \gls{DC} part of the onshore converter stations are represented using an equivalent \gls{DC} source for this work as shown in Figure \ref{Monopole_rep_2}. This is done, as the focus of the thesis is majorly on the dynamic performance related to the \gls{AC} side of the network. Conventionally, the onshore converter stations provide \gls{DC} voltage and reactive power control. Hence, the representation of a constant \gls{DC} voltage source ensures the \gls{DC} voltage control during the time of disturbances in the \gls{AC} offshore network. The voltage of the \gls{DC} sources are rated at 640 kV representing the \gls{HVDC} transmission voltage.  
+\subsection{Onshore Equivalent Converter Stations}
+The connection between the offshore converter station and the onshore converter station follows a symmetrical monopole configuration as shown in Figure \ref{Monopole_rep} \cite{sharifabadi2016design}. However, the \gls{DC} part of the onshore converter stations are represented using an equivalent \gls{DC} source for this work as shown in Figure \ref{Monopole_rep_2}. This is done, as the focus of the thesis is majorly on the dynamic performance related to the \gls{AC} side of the network. Conventionally, the onshore converter stations provide \gls{DC} voltage and reactive power control. Hence, the representation of a constant \gls{DC} voltage source ensures the \gls{DC} voltage control during the time of disturbances in the \gls{AC} offshore network. The voltage of the \gls{DC} sources are rated at 640 kV representing the \gls{HVDC} transmission voltage. The equivalent representation of the symmetrical monopole configuration in RSCAD is shown in Appendix \ref{monopole_rep_RSCAD}.  
 
 \begin{figure}[H]
 \centering
