--- a/5.Operation_of_2GW.tex
+++ b/5.Operation_of_2GW.tex
@@ -329,7 +329,7 @@ Analyzing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to pr
 \end{figure}
 
 Also the voltages at \gls{PCC}-2, 3 and 4 have transients during the time of fault and is then stabilised to slightly higher value than the pre-fault state to compensate for the loss of \gls{OWF}-1 from the network. The post-fault voltage value is within the tolerance limit ($\pm$10 \% ) and this can be viewed from the graphs in Figure \ref{VACP_WT234_3phaseSC}. An important observation in the voltage graphs of \gls{OWF}s-2, 3 and 4 is the occurrence of spikes right after the circuit breaker CB-1a is opened, as can be seen in Figure \ref{VACP_WT234_3phaseSC}. 
-There can be two reasons for such a phenomena to occur. The first is that, after the circuit breaker CB-1a is opened, reactive current injection still takes place (at 0.59 s in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) and this causes the voltage at the corresponding \gls{PCC} to also rise. Such a rise in voltage is not applicable in real world \gls{OWF}s and is therefore a drawback that occurs due to the \gls{OWF} modelling. The second reason could be due to two control strategies that provide the voltage reference in the network. It is seen that during the steady state and post-fault condition, the V/F control is dominant and provides the voltage reference in the network. However, during the time of fault, the \gls{DVC} in all \gls{OWF}s takes the role of providing the voltage reference in the corresponding \gls{PCC}s as seen in \gls{PCC}-1 during the time of three-phase line to ground fault in cable-1. The sudden change back to the steady-state condition after the fault is released could lead to discrepancies between the V/F mode and the \gls{DVC}. The conflict between these control strategies occur as to which control strategy provides the voltage reference right after the circuit breaker is open and hence this causes a spike in voltage at the \gls{PCC}s.
+There can be two reasons for such a phenomena to occur. The first is that, after the circuit breaker CB-1a is opened, reactive current injection still takes place (at 0.59 s in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) and this causes the voltage at the corresponding \gls{PCC} to also rise. Such a rise in voltage is not applicable in real-world \gls{OWF}s and is therefore a drawback that occurs due to the \gls{OWF} modelling. These spikes can be ignored as they do not represent the performance of the real hardware. The second reason could be due to two control strategies that provide the voltage reference in the network. It is seen that during the steady state and post-fault condition, the V/F control is dominant and provides the voltage reference in the network. However, during the time of fault, the \gls{DVC} in all \gls{OWF}s takes the role of providing the voltage reference in the corresponding \gls{PCC}s as seen in \gls{PCC}-1 during the time of three-phase line to ground fault in cable-1. The sudden change back to the steady state condition after the fault is released could lead to discrepancies between the V/F mode and the \gls{DVC}. The conflict between these control strategies occur as to which control strategy provides the voltage reference right after the circuit breaker is open and hence this causes a spike in voltage at the \gls{PCC}s.
 
 \begin{figure}[H]
 %\centering
