--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -35,20 +35,26 @@ Few significant results of the model include the achievement of short-term volta
 \vspace{2mm}
 \paragraph{\textcolor{blue}{Research Question 1 : How effective is the \gls{DVC} when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?}}
 
-\paragraph{} As the upcoming projects are expected to have 66 kV \gls{HVAC} transmission from \gls{OWF} to the offshore converter station, the \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid, is modelled for a 66 kV offshore network in RSCAD. The performance of \gls{DVC} is tested for the most severe disturbance i.e. the three-phase fault. The three-phase line to ground fault is implemented in the middle of the 66 kV \gls{HVAC} cable. On viewing the voltage profile at the \gls{PCC} following the fault, it is observed that \gls{DVC} provides a stable operation in terms of short-term voltage stability. In terms of reactive current injection, the \gls{DVC} provides active current priority during steady state conditions and reactive current priority during the time of fault which is a significant requirement by most of the grid codes. Additionally, the indirect control of voltage in conventional current control requires a FRT controller to force reactive current injection during the time of fault. However, such an external control is not required in \gls{DVC} wherein the voltage of \gls{GSC} is controlled directly. 
+\paragraph{} As the upcoming projects are expected to have 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station, the \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid, is modelled for a 66 kV \gls{HVAC} offshore network in RSCAD. The performance of \gls{DVC} is tested for the most severe disturbance i.e. the three-phase line to ground fault. The three-phase line to ground fault is implemented in the middle of the 66 kV \gls{HVAC} cable. On viewing the voltage profile at the \gls{PCC} following the fault, it is observed that \gls{DVC} provides a stable operation in terms of short-term voltage stability. This is due to the fast control action of the local voltage control in the reactive power loop of the \gls{DVC} to support the \gls{PCC} voltage during the time of fault. 
+% During the fault, the active power generation from the \gls{WG} is stopped. The power output from the \gls{MSC} remains the same as pre-fault state, whereas the output from the \gls{GSC} reduces. Hence, in order to maintain the power balance equation, the \gls{DC} voltage across the capacitor increases, when this increases beyond a particular value, the chopper gets activated. 
+In terms of reactive current injection, the \gls{DVC} provides active current priority during steady state conditions and reactive current priority during the time of fault which is a significant requirement by most of the grid codes. The effect of damping during the time of fault is controlled by the washout filters in the active and reactive power control loops. A parameter sensitivity analysis is performed for the washout filters to assess the effectiveness in damping. Additionally, it can stated that the indirect control of voltage in conventional current control requires a Fault Ride Through (FRT) controller to force reactive current injection during the time of fault. However, such an external control is not required in \gls{DVC} wherein the voltage of \gls{GSC} is controlled directly. 
 
 \paragraph{\textcolor{blue}{Research Question 2 : What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?}}
 
-\paragraph{} The performance of the implemented \gls{DVC} in a average model of Type-4 \gls{WG} in RSCAD for a 66 kV \gls{HVAC} network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV \gls{HVAC} network in terms of short-term voltage stability and reactive current injection following a three-phase fault in the network. A three-phase fault event in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platforms. The voltage and current profiles are compared and found to have good correspondence following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} for a 66 kV \gls{HVAC} offshore network in RSCAD. Moreover, the model developed in RSCAD provides accurate results for the real-time application of the implemented \gls{DVC} and can be used as a reference model since it provides a detailed representation of the Type-4 \gls{WG} when compared to the simplified representation of the \gls{WG} in the PowerFactory model. The results in terms of short-term voltage stability and reactive current injection obtained for the 66 kV \gls{HVAC} network are in line with the results from previous studies with \gls{DVC} implemented in Type-4 \gls{WG}s connected to a 33 kV \gls{HVAC} network as in \cite{korai_dynamic_2019}.    
+\paragraph{} The performance of the implemented \gls{DVC} in a average model of Type-4 \gls{WG} in RSCAD for a 66 kV \gls{HVAC} network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV \gls{HVAC} network. The comparison is done in terms of short-term voltage stability and reactive current injection following a three-phase line to ground fault in the network. A three-phase line to ground fault in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platform. The voltage, active and reactive current profiles are compared and found to have good correspondence following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} for a 66 kV \gls{HVAC} offshore network in RSCAD. Moreover, it is observed that the model developed in RSCAD has slight transients in the active and reactive currents throughout the simulation. This is due to the detailed model representation of \gls{GSC} in RSCAD when compared to the simplified model in PowerFactory. These results show that the RSCAD model provides better detailed representation of the real-world operation of the implemented \gls{DVC} and can be used as a reference model. The way \gls{DVC} is modelled to provide voltage support during the time of fault in the 66 kV \gls{HVAC} network are in line with the results from previous studies, in which the \gls{DVC} is implemented for a 33 kV \gls{HVAC} network as explained in \cite{korai_dynamic_2019}.    
+
+
+%and thereby, results achieved in terms of short-term voltage stability and reactive current injection 
+
 
 \paragraph{\textcolor{blue}{Research Question 3 : How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore \gls{MMC}s within a multi-gigawatt offshore transmission network?}}
 
-\paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all the four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady-state operation, one of the \gls{MMC}s (\gls{MMC}-1) is operated in grid forming (V/F control) and to maintain the flow of power in the network, \gls{MMC}-2 is operated with grid following (active power control) behaviour. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
-The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of dynamic conditions tested is the disconnection of one set of \gls{OWF}. In such a situation, it is observed that the network remains stable and the power flowing through \gls{MMC}-1 reduces as it is working in grid forming control. Another dynamic event tested is the three-phase fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate the \gls{OWF} from the network when the fault occurs in the corresponding \gls{HVAC} cable. It is observed that the operation of the entire network remains stable and after the circuit breaker is opened, islanding the \gls{OWF}, the \gls{DVC} in the corresponding \gls{OWF} provides reactive current injection to the fault location.
+\paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all the four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady-state operation, it is proposed that one of the \gls{MMC}s (\gls{MMC}-1) is operated in V/F control and to constantly continue the flow of power in the network, it is proposed that \gls{MMC}-2 is operated in active power control. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
+The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of highly severe conditions tested is the disconnection of one \gls{OWF}. In such a situation, it is observed that the network remains stable and the power flowing through \gls{MMC}-1 reduces as it is working in V/F control i.e. capable of providing and absorbing power. Another highly severe event tested is the three-phase line to ground fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate the \gls{OWF} from the network when the fault occurs in the corresponding \gls{HVAC} cable. It is observed that the operation of the entire network remains stable and after the circuit breaker is opened, islanding the \gls{OWF}, the \gls{DVC} in the corresponding \gls{OWF} provides reactive current injection to the fault location.
 
 \paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in an offshore network for parallel operation?}}
 
-\paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in steady-state since all the four \gls{OWF}s are modelled to generate equal amount of power. During the dynamic conditions such as the disconnection of one set of \gls{OWF}, it is observed that the power generated from other \gls{OWF}s connected to the network compensate for the loss of the disconnected \gls{OWF} by providing a slightly higher voltage at the corresponding \gls{PCC}s. Depending on the active power reference specified in the \gls{MMC} with grid following control (\gls{MMC}-2 in this case), the connected \gls{DVC}s contribute equally to this power since all the \gls{OWF}s generate the same amount of power. Similar results are attained for another dynamic event of a three-phase fault in any \gls{HVAC} cable. This shows the well-ordered coordination between the \gls{OWF}s in terms of short-term voltage stability and power flow in the network during all conditions.  
+\paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in steady-state since all the four \gls{OWF}s are modelled and simulated by considering the same wind speed profile (generating equal amount of power). During the dynamic conditions such as the disconnection of one set of \gls{OWF}, it is observed that the power generated from other \gls{OWF}s connected to the network compensate for the loss of the disconnected \gls{OWF} by providing a slightly higher voltage at the corresponding \gls{PCC}s. Depending on the active power reference specified in the \gls{MMC} with active power control (\gls{MMC}-2 in this case) and due to the assumption of having similar parameters in all \gls{DVC}, the currents are limited in the \gls{DVC}s contribute equally to this power since all the \gls{OWF}s generate the same amount of power. Similar results are attained for another dynamic event of a three-phase fault in any \gls{HVAC} cable. This shows the well-ordered coordination between the \gls{OWF}s in terms of short-term voltage stability and power flow in the network during all conditions.  
 
 \section{Recommendations for Future Work}
 Having successfully achieved the defined goals for this thesis and based on the studies performed, the author provides recommendations in the following section:  
