--- a/Appendix-d.tex
+++ b/Appendix-d.tex
@@ -154,7 +154,7 @@ The ".clo" file must be added first using the 'Dnm1' option, which is obtained b
   \label{fig:Tline_config_RSCAD}
 \end{figure}
 
-\section{Representation of symmetrical monopole configuration in RSCAD}
+\section{Representation of symmetrical monopole configuration in RSCAD}\label{monopole_rep_RSCAD}
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
@@ -170,7 +170,7 @@ The ".clo" file must be added first using the 'Dnm1' option, which is obtained b
   \caption{DC source-2 connected to the receiving end of HVDC cable-2}
   \label{DC_Source_Cab2}
 \end{subfigure}
-\caption{Onshore MMC station representation using DC source in RSCAD}
+\caption{Onshore converter stations representation using DC sources in RSCAD}
 \label{fig:DC_source_cab}
 \end{figure}
 
