--- a/report.bib
+++ b/report.bib
@@ -299,3 +299,21 @@ The simulator-Hardware,
   year={2010},
   publisher={IEEE}
 }
+
+@techreport{muller2017translate,
+  title={{Translate COP21: 2045 outlook and implications for offshore wind in the North Seas}},
+  type = {Technical Report},
+  author={Ecofys},
+  year={2017},
+}
+
+@article{abdelwahed2016power,
+  title={{Power Sharing Control Strategy of Multiterminal VSC-HVDC Transmission Systems Utilizing Adaptive Voltage Droop}},
+  author={{Abdelwahed, Mohamed Abdelaziz and El-Saadany, Ehab F}},
+  journal={IEEE Transactions on Sustainable Energy},
+  volume={8},
+  number={2},
+  pages={605--615},
+  year={2016},
+  publisher={IEEE}
+}
