--- a/report.tex
+++ b/report.tex
@@ -2,7 +2,9 @@
 \usepackage[justification=centering]{caption}
 \usepackage{xcolor}
 \usepackage{multirow}
-\usepackage{natbib}
+\usepackage[numbers]{natbib}
+%\usepackage{unsrtnat}
+%\usepackage[numbers]{natbib}
 \usepackage{epstopdf}
 \usepackage{titlesec}
 \usepackage{float}
@@ -157,19 +159,19 @@
 
 \mainmatter
 
-% \input{1.Introduction}
+\input{1.Introduction}
 % \input{2.Scientific_Background}
  \input{3.Implementation_of_DVC}
- \input{4.Large_scale}
-% \input{5.Operation_of_2GW}
-% \input{6.Conclusions_and_future_scope}
+% \input{4.Large_scale}
+ \input{5.Operation_of_2GW}
+\input{6.Conclusions_and_future_scope}
 
- \begin{appendices}
+% \begin{appendices}
 %  \input{Appendix-a}
 %  \input{Appendix-b}
-  \input{Appendix-c}
- \input{Appendix-d}
-  \end{appendices}
+%  \input{Appendix-c}
+% \input{Appendix-d}
+%  \end{appendices}
 \bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
 
