--- a/3.Implementation_of_DVC.tex
+++ b/3.Implementation_of_DVC.tex
@@ -73,7 +73,7 @@ The overall working of RSCAD can be understood as depicted by the flowchart in F
     \label{fig:RSCAD_Flowchart}
 \end{figure}
 
-\section{Layout of the 66 kV HVAC test system in RSCAD}\label{RSCAD_ACsourcemodel}\label{WT1_ACsource_RSCAD_Test_Layout}
+\section{Layout of the 66 kV HVAC Test System in RSCAD}\label{RSCAD_ACsourcemodel}\label{WT1_ACsource_RSCAD_Test_Layout}
 After understanding the basics of RSCAD software, a 66 kV offshore network, as shown in Figure \ref{fig:WT1_Model_RSCAD} is developed. The network consists of the following components.
 
 \begin{itemize}
@@ -194,7 +194,7 @@ Upon deriving the inductance, the resistance is selected to match the impedance 
 
 The series reactor is used for limiting the current to the \gls{AC} network. The inductance value of the reactor was selected after precise tuning and is set to 0.9 mH to achieve voltage of 1 p.u. at the \gls{PCC}.
 
-\subsubsection{Offshore Wind Farm Transformer}\label{scaling_OWF}
+\subsubsection{OWF Transformer}\label{scaling_OWF}
 The \gls{GSC} is connected in series to a three-phase offshore 66/2 kV, 6 MVA transformer through a series reactor and a shunt \gls{HPF} as seen in Figure \ref{fig:OveriewSmallTimeStepOWF}. Single-phase \gls{VSC} interface transformer shown in Figure \ref{fig:VSC_interface_trafo_smalldt} available in the small time step library is used for this approach. Three transformers each rated 2 MVA are connected in delta-wye configuration as seen in Figure \ref{fig:OveriewSmallTimeStepOWF}. In RSCAD, the scaling up of power is done at this transformer. The option for scaling up the primary current of the transformer is available in the \gls{VSC} interface transformer block as shown in Figure \ref{fig:VSC_interface_trafo_scaling} \cite{rtds_tech}. The user can control the amount of scaling, i.e. the number of parallel units by a slider, as shown in Figure \ref{fig:scaling_factor_RSCAD}. The user can model the components in the secondary side of the transformer as required for a single \gls{WG} and then scale it to the required power (nearly 700 MW in this case).
 
 \begin{figure}[H]
@@ -263,11 +263,11 @@ The external \gls{AC} system represents the infinite grid connection and is mode
 \section{Control structures}
 The control strategies are implemented in the \gls{MSC} and \gls{GSC} of the Type-4 \gls{WG}. The conventional current control architecture utilized in \gls{MSC} is explained in Appendix \ref{MSC_Control}. The major area of interest for this thesis is the control strategy of \gls{GSC}. The \gls{DVC} illustrated in Section \ref{DVC_theory} is implemented in the \gls{GSC}.   
 
-\section{Implementation of DVC in RSCAD}\label{DVC_RSCAD}
+\subsection{Implementation of DVC in RSCAD}\label{DVC_RSCAD}
 The control strategy depicted in \cite{korai_dynamic_2019} is achieved in RSCAD software. The control was implemented in RSCAD in \cite{sethi_real-time_nodate-new} for a 33 kV \gls{HVAC} transmission network, but the final goal of achieving reactive current injection during severe dynamic conditions was lacking. The primary reason was due to the avoidance of the current limiter block that is explained later in this section. However, the block is implemented successfully in this work, and the results are illustrated. 
 Since RSCAD allows modelling of the secondary side of the transformer as required for one \gls{WG} as explained in Section \ref{scaling_OWF}, the control loop parameters of \gls{GSC} remain the same as 33 kV for a 66 kV offshore network and are based on the benchmark values provided in \cite{erlich_description_2018}. The control strategy described in Section \ref{DVC_theory} is incorporated in the reactive power and active power control loops defined in the following section. 
 
-\subsection{Reactive Power Control}
+\subsubsection{Reactive Power Control}
 From the control structure, it can be seen that, unlike in conventional current control, the reactive current is not directly utilized for voltage control. The converter voltage is directly controlled here, and this allows the current to modify on its own according to varying network conditions. This strategy is similar to the voltage control in conventional synchronous generators. The reactive control loop consists of an outer loop based on a slow VAR controller that tracks the changes in set-points required by the system-wide demand. The inner loop consists of a fast-acting controller, as the name suggests, that responds towards crucial changes in voltage where quick action is required \cite{korai_dynamic_2019}.
 
 \begin{figure}[H]
@@ -303,7 +303,7 @@ The voltage reference output ($V_{PCC\_ref}$) received from the slow global VAR 
 
 The primary control action is provided by the feed-forward term, $x$, which is the reactance of the \gls{PE} converter (\gls{GSC}). The voltage output obtained on multiplying the current ($i_{q\_ref}$) with $x$ is the set point voltage of the converter in steady state. The reactive control loop parameters are shown in Appendix \ref{tab:Reactive_pow_para}.
 
-\subsection{Active Power Control}\label{Active_power_DVC_theory}
+\subsubsection{Active Power Control}\label{Active_power_DVC_theory}
 The active power control consists of the \gls{DC} voltage, direct frequency control and Voltage Dependent Active Power Reduction (\gls{VDAPR}) control, as shown in Figure \ref{fig:Active_Power_Control_Loop}. The control of active power is provided using the q-axis component of \gls{GSC} voltage as per the Equation \ref{P_eq}. Theoretically, since the \gls{DC} capacitor provides the active power control, the \gls{DC} energy barrier should be made higher which is to be done by increasing the capacitor size and \gls{DC} voltage when in comparison with the conventional \gls{PI} based current control \cite{korai_dynamic_2019}. However, considering the practical aspect, such an increase in capacitance is not incorporated for this work and the \gls{DC} voltage is not increased and is set at 4 kV. Another significant modification that was done is providing the minimum limit, $V_{a\_lim\_min}$, for the voltage measurement. A small value needs to be set for this parameter in RSCAD software or else an error causing division by zero would be bound to occur during the start of the simulation. The active power is calculated as follows: 
 
 \begin{equation}\label{P_eq}
@@ -322,7 +322,7 @@ The \gls{VDAPR} control is provided to control the power injection capacity of t
     \label{fig:Active_Power_Control_Loop}
 \end{figure}
 
-\subsection{Current Limitation}\label{currentlimitation_RSCAD}
+\subsubsection{Current Limitation}\label{currentlimitation_RSCAD}
 The current limitation is an important block that protects the \gls{PE} components from damage due to over current. A new maximum current ($i_{max\_ref}$) value is computed whenever the maximum current ($i_{max0\_ref}$) of the \gls{PE} converter is exceeded. The current limitation is incorporated in \gls{GSC} based on Equations \ref{currentlimeq1} and \ref{currentlimeq2}. The upper and lower limits for $i_{q\_ref}$ and $i_{d\_ref}$ are calculated based on the grid impedance (shown as Priority in Figure \ref{fig:Current_Limiter_block}) and the new maximum currents ($i_{d\_ref\_lim}$ and $i_{q\_ref\_lim}$) are computed. 
 Once the reference limits are computed, the converter voltage limits are calculated by Equation \ref{vol_lim_1} or by Equations \ref{vol_lim_2} and \ref{vol_lim_3} \cite{korai_dynamic_2019}.
 
@@ -361,17 +361,17 @@ else
     V_{GSCxd\_max} = x . i_{q\_ref\_lim}
 \end{equation}
 
-\subsection{Voltage Limitation}
+\subsubsection{Voltage Limitation}
 The \gls{AC} voltage of the \gls{GSC} is generally limited by the \gls{DC} voltage value. The factor that brings the relationship between the \gls{AC} and \gls{DC} voltages is the modulation index. The modulation index is computed, as shown in Equation \ref{MI_eq}. The maximum value of the modulation index is set around to 1, and \gls{GSC} voltage must be limited at that point to avoid non-saturation of the \gls{GSC}. 
 
 \begin{equation}\label{MI_eq}
     m = \frac{2\sqrt{2} V_{AC}}{\sqrt{3} {V_{DC}}}
 \end{equation}
 
-\section{Analysis of the dynamic performance of 66 kV test system}
+\section{Analysis of the Dynamic Performance of 66 kV Test System}
 After the 66 kV system is modelled, it has to be tested for operation in steady-state and dynamic conditions. The performance related to short-term voltage stability and reactive power injection by the \gls{DVC} during the most severe dynamic situation in the grid has to be analyzed. A three-phase short circuit in the middle of the \gls{HVAC} cable is chosen to test the same.
 
-\subsection{Three-phase line to ground fault}
+\subsection{Three-phase Line to Ground Fault}
 
 The line to ground fault logic available in the power system library in RSCAD is adapted in this network by splitting the cable model into two halves and implementing the fault logic in the middle of the two halves as shown in Figure \ref{fig:2cablesblockwithfault}. %The fault logic is explained in Appendix \ref{fault_logic}. 
 The Draft module is compiled, and after ensuring no errors, the system is run in the Runtime module. The system is stabilized with the voltage values within the tolerance limit of $\pm$ 10\% during steady-state operation.
@@ -411,7 +411,7 @@ The spikes in voltage, frequency and currents after the fault is released at 0.6
 \end{figure}
 
 
-\subsubsection{Parameter selection for Washout Filters}\label{para_selection_washout}
+\subsubsection{Parameter Selection for Washout Filters}\label{para_selection_washout}
 The damping during the transient process mentioned in Section \ref{DVC_theory} is ensured by the washout filters in the reactive power and active power control loops as seen in Figure \ref{fig:Reactive_Power_Control_Loop} and Figure \ref{fig:Active_Power_Control_Loop} respectively. Parameter sensitivity analysis need to be performed for the washout filters to ensure fast damping of transients. The output of the washout filter for various proportional gains for a step response is depicted in Figure \ref{fig:Washout_gain_output}. The proportional gain represents values to which the output of the washout filter changes when there is a change in the input. The time constant represents the rate of this change. It can be seen that the output of the washout filter changes proportionally to the gain value specified and comes back to the initial value after a specific time, depending on the time constant mentioned.
 
 
@@ -451,7 +451,7 @@ PowerFactory is a software tool developed by DIgSILENT (Germany) that is used fo
 \end{itemize}
 PowerFactory also provides development of user-defined models using DIgSILENT Simulation Language (DSL). These features are utilized, and \gls{DVC} control is implemented in PowerFactory for a typical configuration of the offshore network in \cite{korai_dynamic_2019}. It is tested and proved to work \cite{korai_dynamic_2019}. The test results achieved in RSCAD in the previous section need to be compared with a similar 66 kV \gls{HVAC} offshore network in PowerFactory to validate the control action. In this section, a 66 kV \gls{HVAC} offshore network is developed in PowerFactory with the benchmark \gls{DVC} model utilized from \cite{korai_dynamic_2019}. Differences in the models are notified, the voltage and current profiles are compared for a three-phase line to ground fault in the middle of the cable.
 
-\section{Layout of the 66 kV HVAC test system in PowerFactory}
+\section{Layout of the 66 kV HVAC Test System in PowerFactory}
 
 The 66 kV offshore network is modelled in PowerFactory as shown in Figure \ref{fig:WT1_Model_PFD_comp}. The network consists of the following components:
 
@@ -475,7 +475,7 @@ The 66 kV offshore network is modelled in PowerFactory as shown in Figure \ref{f
     \label{fig:WT1_Model_PFD_comp}
 \end{figure}
 
-\subsection{Simplified model of FSC based WG System}
+\subsection{Simplified FSC based WG System}
 The wind turbine and \gls{MSC} are simplified since they do not contribute to the dynamics of grid. \gls{LSC} is modelled in detail. A constant injection of active current is proposed from the \gls{MSC} to the \gls{DC} side \cite{korai_dynamic_2019}. Hence it is modelled as a \gls{DC} current source. The \gls{WG} unit is represented as a static generator model with 750 MVA nominal apparent power. It is made to operate with constant reactive power (Q) control in order to achieve the active and reactive power set points same as in RSCAD model. The active power flow is set to 700 MW, similar to the RSCAD model.
 
 \subsubsection{DC Circuit}
@@ -497,7 +497,7 @@ Pi model is utilized as it is easier to input the cable parameters in terms of R
 \subsection{External AC system}
 The external \gls{AC} system in PowerFactory also represents an infinite grid. Similar to the model in RSCAD in Section \ref{ext_AC_source}, the infinite grid is modelled as a \gls{AC} voltage source available in the PowerFactory drawing toolbar. 
 
-\section{Comparison of models in RSCAD and PowerFactory }
+\section{Comparison of Models in RSCAD and PowerFactory }
 The major differences between the 66 kV \gls{HVAC} network built in RSCAD and PowerFactory are illustrated in Table. \ref{tab:Comp_RSCAD_PFD_Para}. 
 \vspace{-1mm}
 \begingroup
@@ -528,7 +528,7 @@ Scaling factor at transformer  & Not applicable        & 117 (cf. Section. \ref{
 \paragraph{}
 However, it must be noted that these differences does not affect the performance of the control operation and both the models have equal immpedances that makes the comparison significant. 
 
-\subsection{Selection of time step in RSCAD and PowerFactory}
+\subsection{Selection of Time Step in RSCAD and PowerFactory}
 Before the start of the simulation, a specific time step value suitable for both the RSCAD and PowerFactory models need to be set. As mentioned in Section \ref{OWF}, the ratio of large time step to small time step needs to higher than 12 in RSCAD model if NovaCor processor is used. Since the small time step is chosen to be 2500 ns for the RSCAD model as mentioned in Section \ref{OWF}, a value of 50 $\mu$s is chosen for the large time step. The setting can be done by right-clicking on the Draft module and selecting "Circuit Options" in RSCAD. In PowerFactory, it can be edited in the "Step Size" option available in the "Calculation of initial conditions" tab, as shown in Figure \ref{fig:Stepsize_RSCAD_PFD}.  
 
 \begin{figure}[H]
@@ -561,7 +561,7 @@ The 66 kV offshore network model in RSCAD and PowerFactory are compared for a th
     \label{fig:VACP_comp}
 \end{figure}
 
-Due to the unavoidable modelling differences in the software packages, the currents are measured at \gls{PCC} bus for the RSCAD model and at \gls{FSC} bus for the PowerFactory model. However, this does not affect the magnitude as the currents are measured in per unit. The currents in both the models have a similar profile, as summarized for the d-axis in Figure \ref{fig:ID_fullACSource} and q-axis in Figure \ref{fig:IQ_fullACSource}. The active and reactive currents generated by the \gls{WG} have the same set points in both the models during the pre-fault condition confirming that the power flow in both the models is similar. As the parameters for \gls{DVC} are the same for both the models, the reactive power injection in RSCAD model during the time of fault is achieved similar to the PowerFactory model. The transients occurring during the time of fault at 0.5 s can be damped by controlling the parameters of the washout filters, as seen in Section \ref{para_selection_washout}. The spike in the profiles at the time of fault clearance at 0.64 s is due to the fast dynamics of the \gls{PLL} in both the software packages. It is observed that the currents in RSCAD model have slight variations throughout the simulation. This is due to the detailed model representation of the \gls{GSC} in RSCAD when compared to a simplified representation in PowerFactory. Therefore, it can be concluded that the RSCAD model with the implemented \gls{DVC} provides similar results as the benchmark PowerFactory model. Moreover, the results from RSCAD model are more detailed and hence can be used as a base model for reference as it provides a better representation of the real-world operation.  
+Due to the unavoidable modelling differences in the software packages, the currents are measured at \gls{PCC} bus for the RSCAD model and at \gls{FSC} bus for the PowerFactory model. However, this does not affect the magnitude as the currents are measured in per unit. The currents in both the models have a similar profile, as summarized for the d-axis in Figure \ref{fig:ID_fullACSource} and q-axis in Figure \ref{fig:IQ_fullACSource}. The active and reactive currents generated by the \gls{WG} have the same set points in both the models during the pre-fault condition confirming that the power flow in both the models is similar. As the parameters for \gls{DVC} are the same for both the models, the reactive power injection in RSCAD model during the time of fault is achieved similar to the PowerFactory model. The transients occurring during the time of fault at 0.5 s can be damped by controlling the parameters of the washout filters, as seen in Section \ref{para_selection_washout}. The spike in the profiles at the time of fault clearance at 0.64 s is due to the fast dynamics of the \gls{PLL} in both the software packages. It is observed that the currents in RSCAD model have slight transients throughout the simulation. This is due to the detailed model representation of the \gls{GSC} in RSCAD when compared to a simplified representation in PowerFactory. Therefore, it can be concluded that the RSCAD model with the implemented \gls{DVC} provides similar results as the benchmark PowerFactory model. Moreover, the results from RSCAD model are more detailed and hence can be used as a base model for reference as it provides a better representation of the real-world operation.  
 
 
 % \begin{figure}[H]
